--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-<header>
-  <h1>Welcome to LweshaKj's Stationery</h1>
-  <p>Located at Ihanda Ward, along the Majengo Road.</p>
-</header>
+  <header>
+    <h1>Welcome to LweshaKj's Stationery</h1>
+    <p>Located at Ihanda Ward, along the Majengo Road.</p>
+  </header>
 
-<div id="products-container"></div>
+  <!-- Product Section -->
+  <div class="products" id="products-container"></div>
 
-<footer>
-  <p>&copy; 2025 LweshaKj's Stationery. All rights reserved.</p>
-</footer>
+  <footer>
+    <p>&copy; 2025 LweshaKj's Stationery. All rights reserved.</p>
+  </footer>
 </body>
 </html>
